--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ilp-settlement-xrp",
+  "name": "ilp-settlement-cro",
   "version": "0.1.0",
-  "description": "Settle Interledger payments using on-ledger XRP transfers",
+  "description": "Settle Interledger payments using on-ledger CRO transfers",
   "bin": {
-    "ilp-settlement-xrp": "./bin/run.js"
+    "ilp-settlement-cro": "./bin/run.js"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -24,24 +24,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/interledgerjs/settlement-xrp.git"
+    "url": "git+https://github.com/calvinlauco/settlement-cro.git"
   },
   "author": "Interledger Team <info@interledger.org>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/interledgerjs/settlement-xrp/issues"
+    "url": "https://github.com/crypto-com/settlement-cro/issues"
   },
-  "homepage": "https://github.com/interledgerjs/settlement-xrp#readme",
+  "homepage": "https://github.com/crypto-com/settlement-cro#readme",
   "dependencies": {
     "axios": "^0.19.0",
     "bignumber.js": "^9.0.0",
     "debug": "^4.1.1",
     "ilp-settlement-core": "^0.1.1",
-    "ripple-lib": "^1.3.3"
+    "lossless-json": "^1.0.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.3",
     "@types/jest": "^24.0.18",
+    "@types/lossless-json": "^1.0.0",
     "codecov": "^3.6.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
