--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+#! adapted from https://github.com/interledger-rs/interledger-rs (Interledger.rs)
+#! Copyright (c) 2018-2019 Evan Schwartz and contributors (licensed under the Apache License Version 2.0)
+#! Copyright (c) 2017-2018 Evan Schwartz (licensed under the Apache License Version 2.0)
 version: "3"
 
 services:
