--- a/package.json
+++ b/package.json
@@ -18,15 +18,13 @@
     "lint:check": "tslint --project .",
     "lint:fix": "tslint --project . --fix",
     "format:check": "prettier --check 'src/**/*.ts' tsconfig.json tslint.json",
-    "format:fix": "prettier --write 'src/**/*.ts' tsconfig.json tslint.json",
-    "test": "jest",
-    "codecov": "codecov"
+    "format:fix": "prettier --write 'src/**/*.ts' tsconfig.json tslint.json"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/calvinlauco/settlement-cro.git"
   },
-  "author": "Interledger Team <info@interledger.org>",
+  "author": "Calvin Lau <calvin@crypto.com>",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/crypto-com/settlement-cro/issues"
@@ -41,12 +39,8 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.3",
-    "@types/jest": "^24.0.18",
     "@types/lossless-json": "^1.0.0",
-    "codecov": "^3.6.1",
-    "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
